fix images on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,6 +72,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 p {
